bug squashin

--- a/public/style.css
+++ b/public/style.css
@@ -495,6 +495,10 @@ polyline {
   margin-top: 0.5rem;
 }
 
+.spacerBig {
+  margin-top: 1.5rem;
+}
+
 .smallSpacer {
   margin-top: 0.2rem;
 }
